# prometheus-speedtest

./: Cargo.toml  README.md
src/: config.rs  index.html  main.rs  ping.rs  prometheus.rs  speedtest.rs  startup-notice.txt
src/prometheus/: go_floats.rs  strings.rs
src/public/: index.ansi.txt  index.txt
src/speedtest/: http.rs  vodafone.rs
wiki/: speedtest.md
